--- a/src/styles.less
+++ b/src/styles.less
@@ -1,27 +1,62 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;700&display=swap');
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 :root {
-    --color-primary: #191d2b;
-    --color-secondary: #2effdc;
-    --color-white: #ffffff;
-    --color-black: #000;
-    --color-grey0: #f8f8f8;
-    --color-grey-1: #dbe1e8;
-    --color-grey-2: #b2becd;
-    --color-grey-3: #6c7983;
-    --color-grey-4: #454e56;
-    --color-grey-5: #2a2e35;
-    --color-grey-6: #12181b;
-    --br-sm-2: 14px;
-    --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.3);
-    --clr: #191d2b;
-    --theme-bg: #333356;
-    --theme-icon: #2effdc;
-    --icon-bg: #333356;
+  --orange: #ee8723;
+  --pink: #eb315a;
+  --purple: #c340ca;
+  --color-primary: #191d2b;
+  --color-secondary: #2effdc;
+  --color-white: #ffffff;
+  --color-black: #000;
+  --color-grey0: #f8f8f8;
+  --color-grey-1: #dbe1e8;
+  --color-grey-2: #b2becd;
+  --color-grey-3: #6c7983;
+  --color-grey-4: #454e56;
+  --color-grey-5: #2a2e35;
+  --color-grey-6: #12181b;
+  --br-sm-2: 14px;
+  --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.3);
+  --clr: #191d2b;
+  --theme-bg: #333356;
+  --theme-icon: #2effdc;
+  --icon-bg: #333356;
+}
+
+body {
+  width: 100%;
+  font-family: 'Raleway', sans-serif;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  .g-ctn {
+    padding-top: 75px;
+    min-height: 150vh;
+  }
+}
+
+input {
+  border: 2px solid #aaa;
+  border-radius: 50px;
+  margin: 8px 0;
+  outline: none;
+  padding: 8px;
+  box-sizing: border-box;
+  transition: .3s;
+}
+
+input:focus {
+  // border-color: var(--pink);
+  box-shadow: 0 0 8px 0 var(--orange);
 }
