--- a/src/styles.less
+++ b/src/styles.less
@@ -11,6 +11,7 @@
 :root {
   --orange: #ee8723;
   --pink: #eb315a;
+  --white: rgb(255, 255, 255);
   --purple: #c340ca;
   --color-primary: #191d2b;
   --color-secondary: #2effdc;
@@ -40,10 +41,10 @@ body {
     text-decoration: none;
   }
 
-  .g-ctn {
-    padding-top: 75px;
-    min-height: 150vh;
-  }
+  // .g-ctn {
+  //   padding-top: 75px;
+  //   min-height: 150vh;
+  // }
 }
 
 input {
