--- a/src/app/components/menu-bar/menu-bar.component.less
+++ b/src/app/components/menu-bar/menu-bar.component.less
@@ -1,89 +1,81 @@
 @media (max-width: 767.98px) {
 
     // bottom bar
-    .bottom-bar {
-        position: relative;
-        z-index: 1;
-        width: 100%;
-        display: grid;
-        place-items: center;
-        color: var(--clr);
-        background-color: var(--color-white);
 
-        nav {
-            position: fixed;
-            bottom: 0;
-            width: 100vw;
-            max-width: 100vw;
-            height: 13.672vw;
-            background-color: var(--color-white);
+
+    .bottom__bar {
+        position: fixed;
+        bottom: 0;
+        width: 100vw;
+        max-width: 100vw;
+        height: 13.672vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(0, 0, 0,  0.1);
+        transition: 0.5s all ease;
+
+        .bottom__bar-btns {
             display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 1px 1px 8px var(--color-secondary);
+            gap: 1.95vw;
+            list-style-type: none;
 
-            ul {
-                display: flex;
-                gap: 1.95vw;
-                list-style-type: none;
+            .bottom__bar-btn {
+                cursor: pointer;
+                position: relative;
+                width: 13.672vw;
+                height: 13.672vw;
+                z-index: 1;
+                margin-left: 5vw;
+                margin-right: 5vw;
+                color: var(--white);
 
-                li {
-                    cursor: pointer;
+                .button-container {
                     position: relative;
-                    width: 13.672vw;
-                    height: 13.672vw;
-                    z-index: 1;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: column;
+                    text-align: center;
+                    font-weight: 500;
 
-                    .button-container {
-                        position: relative;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        flex-direction: column;
-                        text-align: center;
-                        font-weight: 500;
-
-                        .icon {
-                            z-index: 100;
-                            position: relative;
-                            display: block;
-                            line-height: 14.648vw;
-                            font-size: 5.156vw;
-                            text-align: center;
-                            transition: 0.5s;
-                        }
-
-                        .text {
-                            position: absolute;
-                            font-weight: 400;
-                            font-size: 2.578vw;
-                            letter-spacing: 0.05em;
-                            transition: 0.5s;
-                            opacity: 0;
-                            transform: translateY(3.906vw);
-                            user-select: none;
-                            -webkit-user-select: none;
-                        }
-                    }
-                }
-
-                li.active-btn .button-container {
                     .icon {
-                        transform: translateY(-6.836vw);
-                        color: var(--color-primary);
+                        z-index: 100;
+                        position: relative;
+                        display: block;
+                        line-height: 14.648vw;
+                        font-size: 5.156vw;
+                        text-align: center;
+                        transition: 0.5s;
                     }
 
                     .text {
-                        opacity: 1;
-                        transform: translateY(1.953vw);
+                        position: absolute;
+                        font-weight: 400;
+                        font-size: 2.578vw;
+                        letter-spacing: 0.05em;
+                        transition: 0.5s;
+                        opacity: 0;
+                        transform: translateY(3.906vw);
+                        user-select: none;
+                        -webkit-user-select: none;
                     }
                 }
             }
+
+            .bottom__bar-btn.active-btn {
+                color: var(--orange);
+            }
         }
     }
+
+    .bottom__bar.scroll {
+        background-color: rgba(0, 0, 0, 0.75);
+    }
+
 }
 
-@media screen and (min-width: 578px) {
+@media screen and (min-width: 768px) {
     .bottom-bar {
         display: none;
     }
