--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,7 @@
       </div>
       <ul class="nav__list">
         <li class="nav__list-btn">
-          <a routerLink="/list/all" class="nav__link">
+          <a routerLink="/movies" class="nav__link">
             <span class="text">Movies</span>
           </a>
         </li>
