Movie Card is done

--- a/src/app/components/menu-bar/menu-bar.component.less
+++ b/src/app/components/menu-bar/menu-bar.component.less
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: rgba(0, 0, 0,  0.1);
+        background-color: rgba(0, 0, 0, 0.1);
         transition: 0.5s all ease;
 
         .bottom__bar-btns {
@@ -76,7 +76,7 @@
 }
 
 @media screen and (min-width: 768px) {
-    .bottom-bar {
+    .bottom__bar {
         display: none;
     }
 }
