--- a/src/styles.less
+++ b/src/styles.less
@@ -13,7 +13,7 @@
   --pink: #eb315a;
   --white: rgb(255, 255, 255);
   --purple: #c340ca;
-  --color-primary: #191d2b;
+  --txt-grey: #ababac;
   --color-secondary: #2effdc;
   --color-white: #ffffff;
   --color-black: #000;
@@ -41,23 +41,31 @@ body {
     text-decoration: none;
   }
 
-  // .g-ctn {
-  //   padding-top: 75px;
-  //   min-height: 150vh;
-  // }
+  .g-ctn {
+    min-height: 100vh;
+
+
+  }
+
+  input {
+    border: 2px solid #aaa;
+    border-radius: 50px;
+    margin: 8px 0;
+    outline: none;
+    padding: 8px;
+    box-sizing: border-box;
+    transition: .3s;
+  }
+
+  input:focus {
+    // border-color: var(--pink);
+    box-shadow: 0 0 8px 0 var(--orange);
+  }
 }
 
-input {
-  border: 2px solid #aaa;
-  border-radius: 50px;
-  margin: 8px 0;
-  outline: none;
-  padding: 8px;
-  box-sizing: border-box;
-  transition: .3s;
-}
+@media (max-width:767.98px) {
+  .g-ctn {
+    padding-bottom: 16vw;
+  }
 
-input:focus {
-  // border-color: var(--pink);
-  box-shadow: 0 0 8px 0 var(--orange);
 }
