favorite button is done, notes there is bug within the icon color

--- a/src/app/components/menu-bar/menu-bar.component.less
+++ b/src/app/components/menu-bar/menu-bar.component.less
@@ -1,8 +1,4 @@
 @media (max-width: 767.98px) {
-
-    // bottom bar
-
-
     .bottom__bar {
         position: fixed;
         bottom: 0;
@@ -47,6 +43,10 @@
                         font-size: 5.156vw;
                         text-align: center;
                         transition: 0.5s;
+
+                        i {
+                            filter: drop-shadow(-1px 4px 3px #000);
+                        }
                     }
 
                     .text {
