search card is done

--- a/src/app/components/favorite-button/favorite-button.component.less
+++ b/src/app/components/favorite-button/favorite-button.component.less
@@ -1,5 +1,5 @@
 .fav__icon {
-  font-size: 2vw;
+  font-size: 5vw;
 }
 
 .favColor {
@@ -8,4 +8,10 @@
 
 .favColor.favorite {
   color: var(--pink);
+}
+
+@media (min-width:768px) {
+  .fav__icon {
+    font-size: 2vw;
+  }
 }
