--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -9,12 +9,7 @@
   </a>
   <div class="movie__desc">
     <div class="rating__ctn">
-      <div class="rating__star">
-        <div
-          class="overlay"
-          [style]="'height: ' + data.vote_average * 10 + '%'"
-        ></div>
-      </div>
+      <app-star-rating [data]="data.vote_average"></app-star-rating>
       <p class="rating__num">{{ data.vote_average }}</p>
     </div>
     <app-favorite-button [data]="data"></app-favorite-button>
