--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   padding: 5px 20px;
-  background-color: rgba(0, 0, 0,  0.1);
+  background-color: rgba(0, 0, 0, 0.1);
   transition: 0.5s all ease;
 
   .top__bar-ctn {
@@ -56,16 +56,13 @@
     }
 
     .nav__ctn {
-      .nav__search {
-        display: none;
-      }
-
       .nav__list {
         padding-top: 5px;
         padding-bottom: 5px;
         width: min-content;
         display: flex;
-        justify-content: flex-end;list-style: none;
+        justify-content: flex-end;
+        list-style: none;
 
         .nav__list-btn {
           display: none;
@@ -143,9 +140,6 @@
             display: block;
           }
 
-          .nav__list-btn:last-child {
-            display: none;
-          }
         }
       }
     }
