--- a/src/app/components/movie-card/movie-card.component.less
+++ b/src/app/components/movie-card/movie-card.component.less
@@ -21,30 +21,12 @@
     .rating__ctn {
       display: flex;
 
-      .rating__star {
-        width: 5vw;
-        height: 5vw;
-        margin-right: 1.5vw;
-        position: relative;
-        background-color: var(--white);
-        clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-      }
-
       .rating__num {
         color: var(--txt-grey);
         font-family: arial;
         font-size: 4.2vw;
         width: 5.8vw;
         overflow: hidden;
-      }
-
-      .overlay {
-        position: absolute;
-        width: 100%;
-        height: 0;
-        bottom: 0;
-        left: 0;
-        background-color: var(--orange);
       }
     }
   }
@@ -67,20 +49,14 @@
     .movie__desc {
       padding: 0.5vw;
       height: 3vw;
+    }
 
+    .movie__desc {
       .rating__ctn {
-
-        .rating__star {
-          width: 2vw;
-          height: 2vw;
-          margin-right: 0.7vw;
-        }
-
         .rating__num {
           font-size: 1.8vw;
           width: 2.45vw;
         }
-
       }
     }
   }
