--- a/src/app/components/hero-banner/hero-banner.component.less
+++ b/src/app/components/hero-banner/hero-banner.component.less
@@ -11,6 +11,7 @@
       background-position: center bottom;
       background-repeat: no-repeat;
       padding-top: 7vh;
+      margin-bottom: 2vh;
 
       .hero__ctn {
         width: 70vw;
@@ -70,9 +71,11 @@
 
             .release__date {
               font-size: 4.2vw;
-              overflow: hidden;
               color: var(--white);
               font-family: arial;
+              width: 9.5vw;
+              white-space: nowrap;
+              overflow: hidden;
             }
           }
 
