--- a/src/app/components/slide-card/slide-card.component.less
+++ b/src/app/components/slide-card/slide-card.component.less
@@ -32,11 +32,74 @@
 
         .slider__img {
           width: 100%;
+          height: 100%;
           border-radius: 1.5vw;
           object-fit: cover;
           box-shadow: #000000 0px 1px 2px 0px, #000000 0px 2px 6px 2px;
         }
       }
+    }
+  }
+
+
+}
+
+@media (min-width:768px) {
+
+  .slider {
+    padding-top: 2vw;
+
+    .slider__title {
+      margin-left: 10vw;
+      padding-bottom: 2vw;
+      color: var(--white);
+      font-size: 2vw;
+    }
+
+    .slider__box-ctn {
+      display: flex;
+      gap: 1vw;
+      width: 88vw;
+      padding-bottom: 2vw;
+      margin-left: 10vw;
+      height: 26.2vw;
+
+      .slider__ctn {
+        width: 15vw;
+        aspect-ratio: 2/3;
+        border-radius: 0.5vw;
+
+        .slider__link {
+          display: block;
+          width: 100%;
+          height: 100%;
+          border-radius: 0.5vw;
+
+          .slider__img {
+            width: 100%;
+            border-radius: 0.5vw;
+            object-fit: cover;
+            box-shadow: #000000 0px 1px 2px 0px, #000000 0px 2px 6px 2px;
+          }
+        }
+      }
+    }
+
+    .slider__box-ctn::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      border-radius: 2vw;
+      background-color: rgb(45, 50, 61);
+    }
+
+    .slider__box-ctn::-webkit-scrollbar {
+      width: 2vw;
+      background-color: transparent;
+    }
+
+    .slider__box-ctn::-webkit-scrollbar-thumb {
+      border-radius: 2vw;
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+      background-color: rgba(238, 135, 35, 0.7);
     }
   }
 }
