all home slider is working

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="bottom__bar {{ navbg }}">
+<nav class="bottom__bar">
   <ul class="bottom__bar-btns">
     <li
       class="bottom__bar-btn {{ location === 'home' ? 'active-btn' : '' }}"
@@ -6,7 +6,6 @@
     >
       <a routerLink="/" class="button-container">
         <span class="icon"><i class="fas fa-home"></i></span>
-        <span class="text">Home</span>
       </a>
     </li>
     <li
@@ -15,7 +14,6 @@
     >
       <a routerLink="/movies" class="button-container">
         <span class="icon"><i class="fas fa-user"></i></span>
-        <span class="text">Movies</span>
       </a>
     </li>
     <li
@@ -24,7 +22,6 @@
     >
       <a routerLink="/favorites" class="button-container">
         <span class="icon"><i class="fas fa-briefcase"></i></span>
-        <span class="text">Favorites</span>
       </a>
     </li>
   </ul>
