--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,6 +2,8 @@
 <div>
   <app-hero-banner></app-hero-banner>
 
+  <app-trending-cards></app-trending-cards>
+
   <app-slide-card [type]="'Now Playing'"></app-slide-card>
 
   <app-slide-card [type]="'Upcoming'"></app-slide-card>
