--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,6 +1,6 @@
 <main class="search__page">
   <form [formGroup]="searchForm" (ngSubmit)="submitForm()">
-    <input type="text" placeholder="search..." formControlName="searchName" />
+    <input type="search" placeholder="search..." formControlName="searchName" />
     <button>search</button>
   </form>
 
