--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -1,10 +1,8 @@
-<div>
-  <div class="container" style="display: flex; flex-wrap: wrap">
-    <ng-container *ngIf="!loading">
-      <div *ngFor="let item of favorites; let index">
-        <app-movie-card [data]="item"></app-movie-card>
-      </div>
-    </ng-container>
-  </div>
+<div class="page__ctn">
+  <ng-container *ngIf="!loading">
+    <div *ngFor="let item of favorites; let index">
+      <app-movie-card [data]="item"></app-movie-card>
+    </div>
+  </ng-container>
 </div>
 <app-menu-bar [location]="'favorites'"></app-menu-bar>
