--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="container" style="display: flex; flex-wrap: wrap">
+  <div class="page__ctn">
     <ng-container *ngIf="!loading">
       <div *ngFor="let item of movies; let index">
         <app-movie-card [data]="item"></app-movie-card>
