--- a/src/styles.less
+++ b/src/styles.less
@@ -40,27 +40,11 @@ body {
     color: inherit;
     text-decoration: none;
   }
+}
 
-  .g-ctn {
-    min-height: 100vh;
-
-
-  }
-
-  input {
-    border: 2px solid #aaa;
-    border-radius: 50px;
-    margin: 8px 0;
-    outline: none;
-    padding: 8px;
-    box-sizing: border-box;
-    transition: .3s;
-  }
-
-  input:focus {
-    // border-color: var(--pink);
-    box-shadow: 0 0 8px 0 var(--orange);
-  }
+.g-ctn {
+  min-height: 100vh;
+  padding-bottom: 5vw;
 }
 
 @media (max-width:767.98px) {
