only contact page left

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -13,7 +13,7 @@
       data-id="about"
     >
       <a routerLink="/movies" class="button-container">
-        <span class="icon"><i class="fas fa-user"></i></span>
+        <span class="icon"><i class="fa-solid fa-clapperboard"></i></span>
       </a>
     </li>
     <li
@@ -21,7 +21,9 @@
       data-id="portfolio"
     >
       <a routerLink="/favorites" class="button-container">
-        <span class="icon"><i class="fas fa-briefcase"></i></span>
+        <span class="icon"
+          ><i class="fa-solid fa-heart fav__icon favColor"></i
+        ></span>
       </a>
     </li>
   </ul>
