--- a/src/app/pages/error/error.component.html
+++ b/src/app/pages/error/error.component.html
@@ -1,2 +1,12 @@
-<p>error works!</p>
+<div class="error__ctn">
+  <div class="error__box">
+    <h1 class="error__title">Page Not Found</h1>
+    <a class="error__code" routerLink="/">
+      <div class="logo__ctn">
+        <p class="logo__txt top"><span class="orange">4</span>04</p>
+        <p class="logo__txt bottom"><span class="pink">4</span>04</p>
+      </div>
+    </a>
+  </div>
+</div>
 <app-menu-bar></app-menu-bar>
