--- a/src/styles.less
+++ b/src/styles.less
@@ -42,14 +42,24 @@ body {
   }
 }
 
-.g-ctn {
-  min-height: 100vh;
-  padding-bottom: 5vw;
+iframe {
+  max-width: 100%;
+  aspect-ratio: 16/9;
 }
 
-@media (max-width:767.98px) {
+.g-ctn {
+  min-height: 100vh;
+  padding-bottom: 15vw;
+}
+
+@media (min-width:767.98px) {
   .g-ctn {
-    padding-bottom: 16vw;
+    padding-bottom: 5vw;
+  }
+
+  iframe {
+    width: 70vw;
+    height: auto;
   }
 
 }
