--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="contact__ctn">
   <form [formGroup]="googleSheetForm" (ngSubmit)="onSubmit()">
     <label for="name">name</label>
     <input type="text" id="name" formControlName="name" />
