--- a/src/app/components/detail-card/detail-card.component.less
+++ b/src/app/components/detail-card/detail-card.component.less
@@ -174,6 +174,7 @@
 
       .search__desc {
         width: 70vw;
+        min-height: 39.5vw;
         margin: auto;
         margin-top: 5vw;
         padding: 1.5vw;
