--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,17 +1,49 @@
 <div class="contact__ctn">
-  <form [formGroup]="googleSheetForm" (ngSubmit)="onSubmit()">
-    <label for="name">name</label>
-    <input type="text" id="name" formControlName="name" />
-
-    <label for="email">email</label>
-    <input type="email" id="email" formControlName="email" />
-
-    <label for="phone">phone</label>
-    <input type="text" id="phone" formControlName="phone" />
-
-    <label for="message">message</label>
-    <input type="text" id="message" formControlName="message" />
-    <button>Submit</button>
+  <form
+    class="contact__form"
+    [formGroup]="googleSheetForm"
+    (ngSubmit)="onSubmit()"
+  >
+    <div class="contact__row">
+      <label class="contact__label" for="name">Name</label>
+      <input
+        class="contact__input"
+        type="text"
+        id="name"
+        formControlName="name"
+      />
+    </div>
+    <div class="contact__row">
+      <label class="contact__label" for="email">Email</label>
+      <input
+        class="contact__input"
+        type="email"
+        id="email"
+        formControlName="email"
+      />
+    </div>
+    <div class="contact__row">
+      <label class="contact__label" for="phone">Phone</label>
+      <input
+        class="contact__input"
+        type="number"
+        id="phone"
+        formControlName="phone"
+        pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+      />
+    </div>
+    <div class="contact__row">
+      <label class="contact__label" for="message">Message</label>
+      <input
+        class="contact__input"
+        type="text"
+        id="message"
+        formControlName="message"
+      />
+    </div>
+    <div class="contact__row">
+      <button class="contact__btn" role="button">Submit</button>
+    </div>
   </form>
 </div>
 <app-menu-bar></app-menu-bar>
