--- a/src/app/pages/contact/contact.component.less
+++ b/src/app/pages/contact/contact.component.less
@@ -1,79 +1,102 @@
-form {
-  margin: auto;
-  margin-top: 5vh;
-  color: #555;
-  display: flex;
-  width: 85vw;
-  max-width: 1000px;
-  padding: 2px;
-  border: 1px solid currentColor;
-  border-radius: 5px;
-  background-color: var(--white);
-
-}
-
-input {
-  width: calc(100% - 40px);
-  background: transparent;
-  margin: 0;
-  padding: 7px 8px;
-  font-size: 14px;
-  color: inherit;
-  border: 1px solid transparent;
-  border-radius: inherit
-}
-
-input::placeholder {
-  color: #bbb;
-}
-
-button {
-  text-indent: -999px;
-  overflow: hidden;
-  width: 40px;
-  padding: 0;
-  margin: 0;
-  border: 1px solid transparent;
-  border-radius: inherit;
-  background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
-  cursor: pointer;
-  opacity: 0.7;
-}
-
-button:hover {
-  opacity: 1;
-}
-
-button:focus,
-input:focus {
-  box-shadow: 0 0 8px 0 var(--orange);
-  border-color: var(--orange);
-  outline: none;
-}
-
 .contact__ctn {
   padding-top: calc(2vw + 40px);
 
-  .search__form {
-    width: 60vw;
-  }
-
-  .results {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2vw;
-    width: 62vw;
+  .contact__form {
+    width: fit-content;
     margin: auto;
 
+    .contact__label {
+      padding-bottom: 0vw;
+      margin-bottom: 10px;
+      margin-top: 15px;
+      color: var(--white);
+      font-size: 16px;
+      display: block;
+    }
+
+    .contact__input {
+      width: 80vw;
+      background: transparent;
+      margin: 0;
+      padding: 7px 8px;
+      font-size: 14px;
+      color: inherit;
+      border: 1px solid transparent;
+      border-radius: 5px;
+      display: block;
+      background-color: var(--white);
+      border-radius: 5px;
+      display: block;
+    }
+
+    .contact__input::placeholder {
+      color: #bbb;
+    }
+
+    .contact__btn {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 7px 8px;
+      border-radius: 5px;
+      border: none;
+      font-family: 'Raleway', sans-serif;
+      font-size: 14px;
+      margin-top: 15px;
+
+      color: #fff;
+      background-color: var(--orange);
+      background-origin: border-box;
+      box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+    }
+
+    .contact__input:focus {
+      box-shadow: 0 0 8px 0 var(--orange);
+      border-color: var(--orange);
+      outline: none;
+    }
   }
+
+
 }
 
-.results {
-  padding-top: 5vw;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 3vw;
-  width: 96vw;
-  margin: auto;
+@media (max-width:767.98px) {
 
+  .contact__ctn {
+    padding-top: calc(2vw + 40px);
+
+    .contact__form {
+      .contact__label {
+        padding-bottom: 0vw;
+        margin-bottom: 10px;
+        margin-top: 15px;
+        color: var(--white);
+        font-size: 16px;
+        display: block;
+      }
+
+      .contact__btn {}
+
+      .contact__btn:focus {
+        box-shadow: 0 0 8px 0 var(--orange);
+        border-color: var(--orange);
+        outline: none;
+      }
+
+      .contact__btn:hover {
+        opacity: 1;
+      }
+
+      .contact__input:focus {
+        box-shadow: 0 0 8px 0 var(--orange);
+        border-color: var(--orange);
+        outline: none;
+      }
+    }
+
+
+  }
 }
