handling contact page PC styling

--- a/src/app/pages/contact/contact.component.less
+++ b/src/app/pages/contact/contact.component.less
@@ -100,3 +100,15 @@
 
   }
 }
+
+@media (min-width:768px) {
+  .contact__ctn {
+
+    .contact__form {
+
+      .contact__input {
+        max-width: 850px;
+      }
+    }
+  }
+}
