Contact form Validation

--- a/src/app/components/hero-banner/hero-banner.component.less
+++ b/src/app/components/hero-banner/hero-banner.component.less
@@ -1,8 +1,5 @@
 @media (max-width:767.98px) {
   .slider {
-    position: relative;
-    height: 100%;
-
 
     .slide {
       width: 100%;
@@ -15,6 +12,7 @@
 
       .hero__ctn {
         width: 70vw;
+        height: 125.5vw;
         margin: auto;
         border-radius: 1.5vw;
 
@@ -29,6 +27,7 @@
         .hero__card {
           width: 70vw;
           margin: auto;
+          display: block;
 
           aspect-ratio: 2/3;
 
