--- a/src/styles.less
+++ b/src/styles.less
@@ -52,6 +52,36 @@ iframe {
   padding-bottom: 15vw;
 }
 
+.alert__ctn {
+  .icon__ctn i {
+    font-size: 35px;
+    margin-bottom: 20px;
+  }
+
+  .alert__title {
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .alert__message {
+    font-size: 16px;
+  }
+
+  .icon__ctn.invalid i {
+    color: var(--pink);
+  }
+
+  .icon__ctn.success i {
+    color: var(--orange);
+  }
+
+  .icon__ctn.error i {
+    color: var(--pink);
+  }
+
+}
+
 @media (min-width:767.98px) {
   .g-ctn {
     padding-bottom: 5vw;
