--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,49 +1,11 @@
 <div class="contact__ctn">
-  <form
-    class="contact__form"
-    [formGroup]="googleSheetForm"
-    (ngSubmit)="onSubmit()"
-  >
-    <div class="contact__row">
-      <label class="contact__label" for="name">Name</label>
-      <input
-        class="contact__input"
-        type="text"
-        id="name"
-        formControlName="name"
-      />
-    </div>
-    <div class="contact__row">
-      <label class="contact__label" for="email">Email</label>
-      <input
-        class="contact__input"
-        type="email"
-        id="email"
-        formControlName="email"
-      />
-    </div>
-    <div class="contact__row">
-      <label class="contact__label" for="phone">Phone</label>
-      <input
-        class="contact__input"
-        type="number"
-        id="phone"
-        formControlName="phone"
-        pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
-      />
-    </div>
-    <div class="contact__row">
-      <label class="contact__label" for="message">Message</label>
-      <input
-        class="contact__input"
-        type="text"
-        id="message"
-        formControlName="message"
-      />
-    </div>
-    <div class="contact__row">
-      <button class="contact__btn" role="button">Submit</button>
-    </div>
-  </form>
+  <div class="contact__desc">
+    <h1 class="contact__title">Staying In Touch</h1>
+    <p class="contact__exp">
+      If you would like to contact us directly, looking for help, or have any
+      suggestion.. <br />you can use this form.
+    </p>
+  </div>
+  <app-contact-form></app-contact-form>
 </div>
 <app-menu-bar></app-menu-bar>
