--- a/src/app/pages/contact/contact.component.less
+++ b/src/app/pages/contact/contact.component.less
@@ -1,114 +1,27 @@
 .contact__ctn {
   padding-top: calc(2vw + 40px);
 
-  .contact__form {
-    width: fit-content;
+  .contact__desc {
+    color: var(--white);
+    width: 80vw;
+    max-width: 850px;
     margin: auto;
 
-    .contact__label {
-      padding-bottom: 0vw;
+    .contact__title {
       margin-bottom: 10px;
       margin-top: 15px;
-      color: var(--white);
-      font-size: 16px;
-      display: block;
     }
 
-    .contact__input {
-      width: 80vw;
-      background: transparent;
-      margin: 0;
-      padding: 7px 8px;
-      font-size: 14px;
-      color: inherit;
-      border: 1px solid transparent;
-      border-radius: 5px;
-      display: block;
-      background-color: var(--white);
-      border-radius: 5px;
-      display: block;
-    }
-
-    .contact__input::placeholder {
-      color: #bbb;
-    }
-
-    .contact__btn {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 7px 8px;
-      border-radius: 5px;
-      border: none;
-      font-family: 'Raleway', sans-serif;
-      font-size: 14px;
+    .contact__exp {
+      margin-bottom: 10px;
       margin-top: 15px;
-
-      color: #fff;
-      background-color: var(--orange);
-      background-origin: border-box;
-      box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
-      user-select: none;
-      -webkit-user-select: none;
-      touch-action: manipulation;
-    }
-
-    .contact__input:focus {
-      box-shadow: 0 0 8px 0 var(--orange);
-      border-color: var(--orange);
-      outline: none;
     }
   }
-
-
 }
 
 @media (max-width:767.98px) {
 
   .contact__ctn {
     padding-top: calc(2vw + 40px);
-
-    .contact__form {
-      .contact__label {
-        padding-bottom: 0vw;
-        margin-bottom: 10px;
-        margin-top: 15px;
-        color: var(--white);
-        font-size: 16px;
-        display: block;
-      }
-
-      .contact__btn {}
-
-      .contact__btn:focus {
-        box-shadow: 0 0 8px 0 var(--orange);
-        border-color: var(--orange);
-        outline: none;
-      }
-
-      .contact__btn:hover {
-        opacity: 1;
-      }
-
-      .contact__input:focus {
-        box-shadow: 0 0 8px 0 var(--orange);
-        border-color: var(--orange);
-        outline: none;
-      }
-    }
-
-
-  }
-}
-
-@media (min-width:768px) {
-  .contact__ctn {
-
-    .contact__form {
-
-      .contact__input {
-        max-width: 850px;
-      }
-    }
   }
 }
