Favorite button bug is totally fixed

--- a/src/app/components/favorite-button/favorite-button.component.html
+++ b/src/app/components/favorite-button/favorite-button.component.html
@@ -1,4 +1,6 @@
-<i
-  class="fa-solid fa-heart fav__icon favColor {{ isFav }}"
-  (click)="onFavClick(data)"
-></i>
+<ng-container *ngIf="isLoading">
+  <i
+    class="fa-solid fa-heart fav__icon favColor {{ isFav }}"
+    (click)="onFavClick(data)"
+  ></i>
+</ng-container>
