scroll to top button added to movies and search page

--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="height__ctn">
   <div
     class="page__ctn"
     infiniteScroll
@@ -15,4 +15,5 @@
   </div>
   <ng-container *ngIf="isLoading"></ng-container>
 </div>
+<app-scroll-top></app-scroll-top>
 <app-menu-bar [location]="'movies'"></app-menu-bar>
