--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -27,5 +27,6 @@
     </ng-container>
   </ul>
   <ng-container *ngIf="isLoading"></ng-container>
+  <app-scroll-top></app-scroll-top>
 </main>
 <app-menu-bar></app-menu-bar>
