fixing loading function

--- a/src/app/components/favorite-button/favorite-button.component.html
+++ b/src/app/components/favorite-button/favorite-button.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="isLoading">
+<ng-container *ngIf="!isLoading">
   <i
     class="fa-solid fa-heart fav__icon favColor {{ isFav }}"
     (click)="onFavClick(data)"
